--- a/package.json
+++ b/package.json
@@ -60,13 +60,13 @@
     "enzyme": "^3.1.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-compat": "^2.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-markdown": "^1.0.0-beta.6",
     "eslint-plugin-react": "^7.0.1",
-    "eslint-config-prettier": "^2.9.0",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
@@ -77,6 +77,7 @@
     "regenerator-runtime": "^0.11.1",
     "roadhog": "^2.3.0",
     "roadhog-api-doc": "^0.3.4",
+    "styled-components": "^3.2.6",
     "stylelint": "^8.4.0",
     "stylelint-config-prettier": "^3.0.4",
     "stylelint-config-standard": "^18.0.0"
