--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "qs": "^6.5.0",
     "rc-drawer-menu": "^0.5.0",
     "react": "^16.2.0",
-    "react-container-query": "^0.9.1",
+    "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-fittext": "^1.0.0",
@@ -75,7 +75,7 @@
     "pro-download": "^1.0.1",
     "redbox-react": "^1.5.0",
     "regenerator-runtime": "^0.11.1",
-    "roadhog": "^2.3.0",
+    "roadhog": "^2.5.0-beta.4",
     "roadhog-api-doc": "^0.3.4",
     "styled-components": "^3.2.6",
     "stylelint": "^8.4.0",
